horizontal scroll fix

--- a/src/app/core/footer/footer.component.scss
+++ b/src/app/core/footer/footer.component.scss
@@ -1,7 +1,7 @@
 .footer {
-  position: fixed;
+  // position: fixed;
   bottom: 0;
-  width: 100vw;
+  width: 100%;
 
   display: flex;
   justify-content: space-between;
