--- a/src/app/core/header/header.component.scss
+++ b/src/app/core/header/header.component.scss
@@ -3,7 +3,7 @@
     position: relative;
     img.drums {
       height: 40vh;
-      width: 100vw;
+      width: 100%;
       object-fit: cover;
       object-position: left top;
     }
