--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,6 +15,7 @@
 html {
   // This defines what 1rem is
   font-size: 62.5%;
+  width: 100% !important;
 }
 
 body {
